src/App.css
@import url(https://fonts.googleapis.com/css?family=Roboto:500);

.navbar {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 5px;
  background-color: white;
  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
  border-bottom: #494949;
  padding-bottom: 0%;
}

.navbar-logo {
  display: flex;
  align-items: center;
  margin-left: 10px;
}

.navbar-search {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-right: 10px;
  position: relative;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.search {
  padding-right: 10px;
}

.content {
  padding: 10px;
}

.App {
  width: 100%;
  text-align: center;
  padding: 2% 0;
  margin-top: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  height: 100vh;
  box-sizing: border-box;
}

.App * {
  box-sizing: border-box;
}

ul {
  padding: 0;
  list-style: none;
}

p {
  margin: 5px 0;
}

input[type="text"] {
margin-bottom: 0px;
}

input[type="number"] {
  padding: 8px 6px 8px 10px;
  border-radius: 4px;
  outline: none;
  border: 1px solid #ccc;
  font-size: 14px;
  line-height: 20px;
  align-self: center;
  height: 38px;
  margin-bottom: 20px;
}

.city {
  width: 250px;
}

#city-search {
  display: flex;
  flex-direction: column;
  margin: auto;
  position: relative;
}

.suggestions {
  width: 250px;
  position: absolute;
  top: 45px;
  z-index: 2;
  align-self: center;
  margin: 0;
  font-size: 14px;
  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
}

.suggestions > li {
  text-align: left;
  padding: 8px 6px 8px 10px;
  background-color: #eee;
  cursor: default;
}

.suggestions > li:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.suggestions > li:hover {
  background-color: #bcdcdb;
}

.event {
  padding: 10px 10px 35px;
  margin-bottom: 10px;
  text-align: left;
  border: 1px solid #ccc;
  border-radius: 4px;
  position: relative;
}

.details-btn {
  position: absolute;
  right: 5px;
  bottom: 5px;
  padding: 5px 8px;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
  margin-bottom: 0px;
}

.calendar-button {
  background-color: #0B5CFF;
  color: white;
  padding: 10px 20px;
  border-radius: 4px;
  text-decoration: none;
  display: inline-block;
  transition: all 0.3s ease;
  border: none;
  margin-top: 20px;
  cursor: pointer;
}

.link {
  background-color: #0B5CFF;
  color: white;
  padding: 10px 20px;
  border-radius: 4px;
  text-decoration: none;
  display: inline-block;
  transition: all 0.3s ease;
  border: none;
  margin-bottom: 10px;
}

.link:hover {
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
  transform: translateY(-1px);
}

.details-btn {
    margin-right: 5px;;
}

.link:active {
  transform: translateY(0);
}

.body {
  width: 80%;
}



@media (min-width: 768px) {
  .body {
    width: 60%;
  }
}

@media (min-width: 1024px) {
  .body{
    width: 80%;
  }
}

h4 {
  margin-bottom: 0;
}

.tester-instructions {
  margin-top: 0;
}

.alerts-container {
  position: fixed;
  top: 0px;
  right: 15px;
  width: 250px;
  z-index: 1000;
}

.details {
  margin-bottom: 10px;
}

.charts-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

@media (max-width: 768px) {
  .charts-container {
    grid-template-columns: 1fr ;
  }
}

